Added database properties

--- a/book-service-dev.properties
+++ b/book-service-dev.properties
@@ -1,1 +1,22 @@
-msg = hello from dev config server
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/jpop
+spring.datasource.username=rohit
+spring.datasource.password=Rohit2233#
+
+spring.flyway.baseline-on-migrate = true
+
+#swagger config properties
+api.version=1.0
+swagger.enabled=true
+swagger.title=Book Service
+swagger.description=Swagger imlementation for Book Service.
+swagger.useDefaultResponseMessages=false
+swagger.enableUrlTemplating=false
+swagger.deepLinking=true
+swagger.defaultModelsExpandDepth=1
+swagger.defaultModelExpandDepth=1
+swagger.displayOperationId=false
+swagger.displayRequestDuration=false
+swagger.filter=false
+swagger.maxDisplayedTags=0
+swagger.showExtensions=false;
